# Entropix-PX4-Autopilot

./: CMakeLists.txt  README.md
ROMFS/: CMakeLists.txt
ROMFS/px4fmu_common/: CMakeLists.txt
ROMFS/px4fmu_common/init.d/: CMakeLists.txt  rcS  rcS_Source
ROMFS/px4fmu_common/init.d/airframes/: 4020_holybro_px4vision_v1_5  CMakeLists.txt
docs/en/: SUMMARY.md
docs/en/flight_modes_mc/: altitude_cruise.md
docs/en/releases/: main.md
src/drivers/distance_sensor/lightware_laser_i2c/: lightware_laser_i2c.cpp
src/drivers/optical_flow/pmw3901/: CMakeLists.txt  PMW3901.cpp  PMW3901.hpp  parameters.c  pmw3901_main.cpp
src/lib/events/: enums.json
src/modules/commander/: Commander.cpp
src/modules/commander/ModeUtil/: mode_requirements.cpp
src/modules/ekf2/: EKF2.cpp
src/modules/ekf2/EKF/: ekf.h  position_fusion.cpp
src/modules/flight_mode_manager/tasks/AltitudeCruise/: FlightTaskAltitudeCruise.hpp
src/modules/flight_mode_manager/tasks/Utility/: StickTiltXY.cpp
src/modules/fw_autotune_attitude_control/: fw_autotune_attitude_control.cpp
src/modules/sensors/: CMakeLists.txt  Integrator.hpp  Kconfig  module.yaml  sensor_params.c  sensor_params_flow.c  sensor_params_mag.c  sensors.cpp  sensors.hpp  voted_sensors_update.cpp  voted_sensors_update.h
src/modules/sensors/data_validator/: CMakeLists.txt  DataValidator.cpp  DataValidator.hpp  DataValidatorGroup.cpp  DataValidatorGroup.hpp
src/modules/sensors/vehicle_acceleration/: CMakeLists.txt  VehicleAcceleration.cpp  VehicleAcceleration.hpp  imu_accel_parameters.c
src/modules/sensors/vehicle_air_data/: CMakeLists.txt  VehicleAirData.cpp  VehicleAirData.hpp  params.c
src/modules/sensors/vehicle_angular_velocity/: CMakeLists.txt  VehicleAngularVelocity.cpp  VehicleAngularVelocity.hpp  imu_gyro_parameters.c
src/modules/sensors/vehicle_imu/: CMakeLists.txt  VehicleIMU.cpp  VehicleIMU.hpp  imu_parameters.c
src/modules/sensors/vehicle_magnetometer/: CMakeLists.txt  VehicleMagnetometer.cpp  VehicleMagnetometer.hpp
src/modules/sensors/vehicle_magnetometer/mag_compensation/python/: mag_compensation.py
src/modules/sensors/vehicle_optical_flow/: CMakeLists.txt  RingBuffer.hpp  VehicleOpticalFlow.cpp  VehicleOpticalFlow.hpp
src/modules/sensors/vehicle_optical_flow/test/: CMakeLists.txt  VehicleOpticalFlowTest.cpp
